# softdev-challenges

./: README.md
dev1/: April.c  August.c  December.c  February.c  January.c  July.c  June.c  March.c  May.c  November.c  October.c  README.txt  September.c  makefile  strange_app  strange_app.c  strange_app.h
dev2/: README.txt  lame_project.tgz  project.tgz
dev2/project/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
dev2/project/autom4te.cache/: output.0  requests  traces.0  traces.1
dev2/project/src/: Makefile  Makefile.am  Makefile.in
dev2/project/src/lib_foo/: Makefile  Makefile.am  Makefile.in  foo.c  foo.h
dev2/project/src/lib_foo/.deps/: foo.Po
dev2/project/src/main/: Makefile  Makefile.am  Makefile.in  main.c  main.h  mistery_foo
dev2/project/src/main/.deps/: main.Po
dev3/: README.txt  solution.py  test.c  test1.c  test2.c  test3.c
python1/: README.txt  solution.py
python2/: README.txt  SECRET  solution.py
python3/: README.txt
python3/blocks/: A  B  C  log  solution.py
shell1/: README  group  solution.sh
shell2/: README.txt  command_line_fu.example.html  solution.sh
shell3/: ..tgz  ..tgz.tgz  ..tgz.tgz.tgz  .solution.swp.tgz  .solution.swp.tgz.tgz  README.txt  solution.sh
